add validation and receiver dashboard